--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "bcrypt": "^5.1.1",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "pdfobject": "^2.3.0",
     "rxjs": "~7.8.0",
